Added support in composer

--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,21 @@
 {
     "name": "elcodi/sitemap",
     "description": "Elcodi Sitemap Component",
-    "keywords": ["elcodi", "sitemap", "ecommerce", "component"],
+    "keywords": [
+        "elcodi",
+        "sitemap",
+        "ecommerce",
+        "component"
+    ],
     "homepage": "https://github.com/elcodi/Sitemap",
     "type": "library",
     "license": "MIT",
+    "support": {
+        "email": "devs@elcodi.com",
+        "forum": "https://gitter.im/elcodi/elcodi",
+        "source": "https://github.com/elcodi/elcodi",
+        "issues": "https://github.com/elcodi/elcodi/issues"
+    },
     "authors": [
         {
             "name": "Marc Morera",
