--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,9 @@
             "Elcodi\\Component\\Sitemap\\": ""
         }
     },
+    "config": {
+        "bin-dir": "bin"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "0.5-dev"
