--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,8 @@
     "require-dev": {
         "phpunit/phpunit": "4.5.0"
     },
+    "minimum-stability": "beta",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Elcodi\\Component\\Sitemap\\": ""
