--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "php": ">=5.4",
         "doctrine/common": "^2.5",
 
-        "elcodi/core": "^1.0@dev"
+        "elcodi/core": "1.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "4.5.0"
@@ -44,6 +44,8 @@
             "Elcodi\\Component\\Sitemap\\": ""
         }
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "config": {
         "bin-dir": "bin"
     },
