--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "php": ">=5.4",
         "doctrine/common": "^2.5",
 
-        "elcodi/core": "self.version"
+        "elcodi/core": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.5.0"
