--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
+        "php": "^5.4|^7.0",
         "doctrine/common": "^2.5",
 
         "elcodi/core": "^1.0"
